--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
         "require": {
             "php": ">=5.3.2",
-            "square1-io/yii-framework": "1.1.14"
+            "square1-io/yii-framework": "1.1.14",
+            "cboden/ratchet": "0.3.*"
         },
         "require-dev": {
             "cboden/ratchet": "0.3.*"
